NTI-7456 fix z-index user

--- a/src/main/resources/scss/debris/_content.scss
+++ b/src/main/resources/scss/debris/_content.scss
@@ -29,7 +29,7 @@
 						height: 100%;
 
 						& > div.sticky {
-							z-index: 50;
+							z-index: 152;
 							background: white;
 							border-top: solid 1px #ededed;
 
