--- a/src/main/resources/scss/layout/_main-layout.scss
+++ b/src/main/resources/scss/layout/_main-layout.scss
@@ -108,7 +108,7 @@ body.white-shade-mask .body-shade-mask {
 	top: 0; left: 0;
 	right: 0;
 	height: $header-height;
-	z-index: 150;
+	z-index: 152;
 	background-color: rgba(255, 255, 255, 0.97);
 	backface-visibility: hidden;
 
